Resolved stylesheet issue

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Brian Williams | Porfolio</title>
-		<link rel="stylesheet" href="/style.css" />
+		<link rel="stylesheet" href="style.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -43,7 +43,7 @@
 				</a>
 				<ul>
 					<a
-						href="/resources/Resume (Brian Williams).pdf"
+						href="resources/Resume (Brian Williams).pdf"
 						target="_blank"
 						class="resume icon"
 					>
@@ -174,7 +174,7 @@
 						<!-- <a href="#about-content" class="down-arrow">
 							<img
 								class="center"
-								src="/resources/double-down-chevron.svg"
+								src="resources/double-down-chevron.svg"
 								alt=""
 							/>
 						</a> -->
@@ -182,7 +182,7 @@
 					<a href="#about-content" class="down-arrow">
 						<img
 							class="center"
-							src="/resources/double-down-chevron.svg"
+							src="resources/double-down-chevron.svg"
 							alt=""
 						/>
 					</a>
@@ -202,7 +202,7 @@
 					</h4>
 					<img
 						class="about-img"
-						src="/resources/about-headshot.png"
+						src="resources/about-headshot.png"
 						alt="Handsome man looking onward"
 					/>
 				</div>
@@ -253,7 +253,7 @@
 					<div class="project-grid">
 						<div class="project-card project-1">
 							<img
-								src="/resources/boot-tool-screenshot.png"
+								src="resources/boot-tool-screenshot.png"
 								alt="boot Tool screenshot"
 								class="project-image"
 							/>
@@ -279,7 +279,7 @@
 						</div>
 						<div class="project-card">
 							<img
-								src="/resources/score-keeper-screenshot.png"
+								src="resources/score-keeper-screenshot.png"
 								alt=""
 								class="project-image"
 							/>
@@ -305,7 +305,7 @@
 						</div>
 						<div class="project-card">
 							<img
-								src="/resources/web-scraper.png"
+								src="resources/web-scraper.png"
 								alt=""
 								class="project-image"
 							/>
@@ -330,7 +330,7 @@
 							</div>
 						</div>
 						<div class="project-card project-4">
-							<img src="/resources/github-pic.png" alt="" class="project-image" />
+							<img src="resources/github-pic.png" alt="" class="project-image" />
 							<div class="card-bottom">
 								<h4>Current WIP, check it out!</h4>
 								<form
