Fixed stylesheet issue

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                   </svg> -->
 		</footer>
 
-		<script src="/script.js"></script>
+		<script src="script.js"></script>
 	</body>
 </html>
 
