--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					<input
 						type="hidden"
 						name="_next"
-						value="http://127.0.0.1:5500/view/#home"
+						value="https://qwilliams815.github.io/portfolioSite/#home"
 					/>
 					<input
 						class="name-email-input"
