Fixed Safari compatability issues

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 				<div class="color-blob"></div>
 				<a href="#contact-modal">
 					<button class="btn-background-circle contact-button">
-						<h4>Contact</h4>
+						<h4 id="test">Contact</h4>
 					</button>
 				</a>
 				<div class="hero-content-wrapper">
@@ -319,14 +319,14 @@
 								>
 									<button type="submit" class="card-button">Code</button>
 								</form>
-								<form
+								<!-- <form
 									class="button-form"
 									action=""
 									method="GET"
 									target="_blank"
 								>
-									<!-- <button type="submit" class="card-button">Demo</button> -->
-								</form>
+									<button type="submit" class="card-button">Demo</button>
+								</form> -->
 							</div>
 						</div>
 						<div class="project-card project-4">
