--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 								</form>
 								<form
 									class="button-form"
-									action="https://codepen.io/qwilliams815/full/GRvqxdB?editors=1000"
+									action="https://qwilliams815.github.io/score_keeper/"
 									method="GET"
 									target="_blank"
 								>
