Updated bio, Added bio collapse for mobile, Added course showcase

--- a/index.html
+++ b/index.html
@@ -194,25 +194,41 @@
 					<h2 class="about-tag title-tag">About</h2>
 					<!-- <div class="about-paragraph-wrapper"></div> -->
 					<h4 class="about-paragraph">
-						<strong>Junior Developer, always learning.</strong><br /><br />
-						With a passion for frugality and opportunity, I am 100% self-taught
-						via free online resources. The past 4 years and 5 languages have
-						only tickled my appetite, and I'm more ready than ever to get to
-						work. But enough about me, let's get on to the good stuff.
+						<strong>From Peanuts to Programming</strong><br /><br />
+						Howdy, I’m Brian! A nut butter media producer turned AV technician specialist turned junior web developer. It’s been a long, rather unconventional road, but I’m thrilled to be just getting started.
+						<br /><br />
+						<span class="more-text">
+						I began my programming journey early 2020 during Covid-19 lockdowns. Upon becoming furloughed from my job, I decided to fill my time learning Python and quickly became addicted to learning anything and everything programming. Using the internet's vast assortment of free classes, certificate programs, and tutorials, I began plotting out potential career paths, ultimately deciding on Web Development. Fast forward a year and I’ve been honing my skills ever since, building out challenging passion projects and growing as a developer.  
+						<br /><br />
+						Moving forward, I am excited to join a team and contribute to creating real world solutions. If you can help make that happen, I look forward to hearing from you. Thanks for reading!
+						<br /><br />
+						<br /><br />
+						</span>
+						
+
 					</h4>
+					<button class="read-more-btn"><h3 class="read-more-btn-text">Read More</h3></button>
 					<img
 						class="about-img"
 						src="resources/about-headshot.png"
 						alt="Handsome man looking onward"
 					/>
+					<div class="course-showcase">
+						<a href="https://hyperskill.org/profile/41912793" target="_blank" class="course" id="course1"></a>
+						<a href="https://www.codecademy.com/profiles/BriGuy815" target="_blank" class="course" id="course2"></a>
+						<a href="https://www.edx.org/" target="_blank" class="course" id="course3"></a>
+						<a href="https://getmimo.com/" target="_blank" class="course" id="course4"></a>
+						<a href="https://learning.edx.org/course/course-v1:HarvardX+CS50+X/home" target="_blank" class="course" id="course5"></a>
+					</div>
 				</div>
+				
 			</section>
 
 			<section class="projects">
 				<div class="projects-wrapper">
 					<h2 class="title-tag projects-tag">Projects</h2>
 						<div class="skills-carousel">
-							<button class="left-arrow">
+							<button class="left-arrow arrow">
 								<svg width="26" height="45" viewBox="0 0 26 45" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M24.5085 6.44074C25.8565 5.05531 25.8262 2.83944 24.4407 1.49146C23.0553 0.143474 20.8394 0.173829 19.4915 1.55926L24.5085 6.44074ZM4 22.5L1.49146 20.0593C0.169515 21.4179 0.169515 23.5821 1.49146 24.9407L4 22.5ZM19.4915 43.4407C20.8394 44.8262 23.0553 44.8565 24.4407 43.5085C25.8262 42.1606 25.8565 39.9447 24.5085 38.5593L19.4915 43.4407ZM19.4915 1.55926L1.49146 20.0593L6.50854 24.9407L24.5085 6.44074L19.4915 1.55926ZM1.49146 24.9407L19.4915 43.4407L24.5085 38.5593L6.50854 20.0593L1.49146 24.9407Z" fill="#F06449"/>
 								</svg>
@@ -228,7 +244,7 @@
 									<h1>PyQt5</h1>
 								</div>
 								<div class="slide">
-									<h1>Version Control</h1>
+									<h1>React</h1>
 								</div>
 								<div class="slide">
 									<h1>BootStrap</h1>
@@ -237,13 +253,13 @@
 									<h1>Figma</h1>
 								</div>
 								<div class="slide">
-									<h1>MySQL</h1>
+									<h1>Version Control</h1>
 								</div>
 								<div class="slide last-slide">
 									<h1>CLI</h1>
 								</div>
 							</div>
-							<button class="right-arrow">
+							<button class="right-arrow arrow">
 								<svg width="26" height="45" viewBox="0 0 26 45" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M1.49146 38.5593C0.143474 39.9447 0.173829 42.1606 1.55926 43.5085C2.94469 44.8565 5.16056 44.8262 6.50854 43.4407L1.49146 38.5593ZM22 22.5L24.5085 24.9407C25.8305 23.5821 25.8305 21.4179 24.5085 20.0593L22 22.5ZM6.50854 1.55926C5.16056 0.173828 2.94469 0.143475 1.55926 1.49146C0.173829 2.83944 0.143475 5.05531 1.49146 6.44074L6.50854 1.55926ZM6.50854 43.4407L24.5085 24.9407L19.4915 20.0593L1.49146 38.5593L6.50854 43.4407ZM24.5085 20.0593L6.50854 1.55926L1.49146 6.44074L19.4915 24.9407L24.5085 20.0593Z" fill="#F06449"/>
 								</svg>
