Added parallax effect, Increased background size, Added more distinct skills section.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Brian Williams | Porfolio</title>
+		<title>Brian Williams | Portfolio</title>
 		<link rel="stylesheet" href="style.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,7 +19,7 @@
 			rel="stylesheet"
 		/>
 	</head>
-	<body>
+	<body class="parallax">
 		<header>
 			<nav>
 				<a href="#home" class="home icon">
@@ -224,48 +224,93 @@
 				
 			</section>
 
+			<section class="skills">
+				<div class="skills-wrapper">
+					<h2 class="title-tag skills-tag">Skills</h2>
+					<div class="skills-carousel">
+						<button class="left-arrow arrow">
+							<svg width="26" height="45" viewBox="0 0 26 45" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M24.5085 6.44074C25.8565 5.05531 25.8262 2.83944 24.4407 1.49146C23.0553 0.143474 20.8394 0.173829 19.4915 1.55926L24.5085 6.44074ZM4 22.5L1.49146 20.0593C0.169515 21.4179 0.169515 23.5821 1.49146 24.9407L4 22.5ZM19.4915 43.4407C20.8394 44.8262 23.0553 44.8565 24.4407 43.5085C25.8262 42.1606 25.8565 39.9447 24.5085 38.5593L19.4915 43.4407ZM19.4915 1.55926L1.49146 20.0593L6.50854 24.9407L24.5085 6.44074L19.4915 1.55926ZM1.49146 24.9407L19.4915 43.4407L24.5085 38.5593L6.50854 20.0593L1.49146 24.9407Z" fill="#F06449"/>
+							</svg>
+						</button>
+						<div class="slide-container">
+							<div class="slide">
+								<h1>Python</h1>
+							</div>
+							<div class="slide">
+								<h1>JavaScript</h1>
+							</div>
+							<div class="slide">
+								<h1>PyQt5</h1>
+							</div>
+							<div class="slide">
+								<h1>React</h1>
+							</div>
+							<div class="slide">
+								<h1>BootStrap</h1>
+							</div>
+							<div class="slide">
+								<h1>Figma</h1>
+							</div>
+							<div class="slide">
+								<h1>Version Control</h1>
+							</div>
+							<div class="slide last-slide">
+								<h1>CLI</h1>
+							</div>
+						</div>
+						<button class="right-arrow arrow">
+							<svg width="26" height="45" viewBox="0 0 26 45" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M1.49146 38.5593C0.143474 39.9447 0.173829 42.1606 1.55926 43.5085C2.94469 44.8565 5.16056 44.8262 6.50854 43.4407L1.49146 38.5593ZM22 22.5L24.5085 24.9407C25.8305 23.5821 25.8305 21.4179 24.5085 20.0593L22 22.5ZM6.50854 1.55926C5.16056 0.173828 2.94469 0.143475 1.55926 1.49146C0.173829 2.83944 0.143475 5.05531 1.49146 6.44074L6.50854 1.55926ZM6.50854 43.4407L24.5085 24.9407L19.4915 20.0593L1.49146 38.5593L6.50854 43.4407ZM24.5085 20.0593L6.50854 1.55926L1.49146 6.44074L19.4915 24.9407L24.5085 20.0593Z" fill="#F06449"/>
+							</svg>
+						</button>
+					</div>
+					<h4 class="swipe-tag">< Swipe ></h4>
+				</div>
+			</section>
+
 			<section class="projects">
 				<div class="projects-wrapper">
 					<h2 class="title-tag projects-tag">Projects</h2>
-						<div class="skills-carousel">
-							<button class="left-arrow arrow">
-								<svg width="26" height="45" viewBox="0 0 26 45" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path d="M24.5085 6.44074C25.8565 5.05531 25.8262 2.83944 24.4407 1.49146C23.0553 0.143474 20.8394 0.173829 19.4915 1.55926L24.5085 6.44074ZM4 22.5L1.49146 20.0593C0.169515 21.4179 0.169515 23.5821 1.49146 24.9407L4 22.5ZM19.4915 43.4407C20.8394 44.8262 23.0553 44.8565 24.4407 43.5085C25.8262 42.1606 25.8565 39.9447 24.5085 38.5593L19.4915 43.4407ZM19.4915 1.55926L1.49146 20.0593L6.50854 24.9407L24.5085 6.44074L19.4915 1.55926ZM1.49146 24.9407L19.4915 43.4407L24.5085 38.5593L6.50854 20.0593L1.49146 24.9407Z" fill="#F06449"/>
-								</svg>
-							</button>
-							<div class="slide-container">
-								<div class="slide">
-									<h1>Python</h1>
-								</div>
-								<div class="slide">
-									<h1>JavaScript</h1>
-								</div>
-								<div class="slide">
-									<h1>PyQt5</h1>
-								</div>
-								<div class="slide">
-									<h1>React</h1>
-								</div>
-								<div class="slide">
-									<h1>BootStrap</h1>
-								</div>
-								<div class="slide">
-									<h1>Figma</h1>
-								</div>
-								<div class="slide">
-									<h1>Version Control</h1>
-								</div>
-								<div class="slide last-slide">
-									<h1>CLI</h1>
-								</div>
+					<!-- <div class="skills-carousel">
+						<button class="left-arrow arrow">
+							<svg width="26" height="45" viewBox="0 0 26 45" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M24.5085 6.44074C25.8565 5.05531 25.8262 2.83944 24.4407 1.49146C23.0553 0.143474 20.8394 0.173829 19.4915 1.55926L24.5085 6.44074ZM4 22.5L1.49146 20.0593C0.169515 21.4179 0.169515 23.5821 1.49146 24.9407L4 22.5ZM19.4915 43.4407C20.8394 44.8262 23.0553 44.8565 24.4407 43.5085C25.8262 42.1606 25.8565 39.9447 24.5085 38.5593L19.4915 43.4407ZM19.4915 1.55926L1.49146 20.0593L6.50854 24.9407L24.5085 6.44074L19.4915 1.55926ZM1.49146 24.9407L19.4915 43.4407L24.5085 38.5593L6.50854 20.0593L1.49146 24.9407Z" fill="#F06449"/>
+							</svg>
+						</button>
+						<div class="slide-container">
+							<div class="slide">
+								<h1>Python</h1>
 							</div>
-							<button class="right-arrow arrow">
-								<svg width="26" height="45" viewBox="0 0 26 45" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path d="M1.49146 38.5593C0.143474 39.9447 0.173829 42.1606 1.55926 43.5085C2.94469 44.8565 5.16056 44.8262 6.50854 43.4407L1.49146 38.5593ZM22 22.5L24.5085 24.9407C25.8305 23.5821 25.8305 21.4179 24.5085 20.0593L22 22.5ZM6.50854 1.55926C5.16056 0.173828 2.94469 0.143475 1.55926 1.49146C0.173829 2.83944 0.143475 5.05531 1.49146 6.44074L6.50854 1.55926ZM6.50854 43.4407L24.5085 24.9407L19.4915 20.0593L1.49146 38.5593L6.50854 43.4407ZM24.5085 20.0593L6.50854 1.55926L1.49146 6.44074L19.4915 24.9407L24.5085 20.0593Z" fill="#F06449"/>
-								</svg>
-							</button>
-					</div>
-					<h4 class="swipe-tag">< Swipe ></h4>
+							<div class="slide">
+								<h1>JavaScript</h1>
+							</div>
+							<div class="slide">
+								<h1>PyQt5</h1>
+							</div>
+							<div class="slide">
+								<h1>React</h1>
+							</div>
+							<div class="slide">
+								<h1>BootStrap</h1>
+							</div>
+							<div class="slide">
+								<h1>Figma</h1>
+							</div>
+							<div class="slide">
+								<h1>Version Control</h1>
+							</div>
+							<div class="slide last-slide">
+								<h1>CLI</h1>
+							</div>
+						</div>
+						<button class="right-arrow arrow">
+							<svg width="26" height="45" viewBox="0 0 26 45" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M1.49146 38.5593C0.143474 39.9447 0.173829 42.1606 1.55926 43.5085C2.94469 44.8565 5.16056 44.8262 6.50854 43.4407L1.49146 38.5593ZM22 22.5L24.5085 24.9407C25.8305 23.5821 25.8305 21.4179 24.5085 20.0593L22 22.5ZM6.50854 1.55926C5.16056 0.173828 2.94469 0.143475 1.55926 1.49146C0.173829 2.83944 0.143475 5.05531 1.49146 6.44074L6.50854 1.55926ZM6.50854 43.4407L24.5085 24.9407L19.4915 20.0593L1.49146 38.5593L6.50854 43.4407ZM24.5085 20.0593L6.50854 1.55926L1.49146 6.44074L19.4915 24.9407L24.5085 20.0593Z" fill="#F06449"/>
+							</svg>
+						</button>
+					</div> -->
+					<!-- <h4 class="swipe-tag">< Swipe ></h4> -->
 					<div class="project-grid">
 						<div class="project-card project-1">
 							<img
