--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Brian Williams | Portfolio</title>
+		<meta name="description" content="A space for people to get to know me and showcase what I'm working on.">
 		<link rel="stylesheet" href="style.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +23,7 @@
 	<body class="parallax">
 		<header>
 			<nav>
-				<a href="#home" class="home icon">
+				<a href="#home" class="home icon" aria-label="Home">
 					<svg
 						xmlns="http://www.w3.org/2000/svg"
 						width="40"
@@ -46,6 +47,7 @@
 						href="resources/Resume (Brian Williams).pdf"
 						target="_blank"
 						class="resume icon"
+						aria-label="Resume"
 					>
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
@@ -64,6 +66,7 @@
 						href="https://github.com/Qwilliams815"
 						target="_blank"
 						class="github icon"
+						aria-label="GitHub"
 					>
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
@@ -82,6 +85,7 @@
 						href="https://www.linkedin.com/in/brian-williams-807832189/"
 						target="_blank"
 						class="linkedin icon"
+						aria-label="Linkedin"
 					>
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
@@ -179,7 +183,7 @@
 							/>
 						</a> -->
 					</div>
-					<a href="#about-content" class="down-arrow">
+					<a href="#about-content" class="down-arrow" aria-label="Down Arrow"> 
 						<img
 							class="center"
 							src="resources/double-down-chevron.svg"
@@ -231,30 +235,35 @@
 							target="_blank"
 							class="course"
 							id="course1"
+							aria-label="Jet Brains course"
 						></a>
 						<a
 							href="https://www.codecademy.com/profiles/BriGuy815"
 							target="_blank"
 							class="course"
 							id="course2"
+							aria-label="Codecademy course"
 						></a>
 						<a
 							href="https://www.edx.org/"
 							target="_blank"
 							class="course"
 							id="course3"
+							aria-label="Edx course"
 						></a>
 						<a
 							href="https://getmimo.com/"
 							target="_blank"
 							class="course"
 							id="course4"
+							aria-label="Mimo course"
 						></a>
 						<a
 							href="https://learning.edx.org/course/course-v1:HarvardX+CS50+X/home"
 							target="_blank"
 							class="course"
 							id="course5"
+							aria-label="Harvard CS50 course"
 						></a>
 					</div>
 				</div>
@@ -264,7 +273,7 @@
 				<div class="skills-wrapper">
 					<h2 class="title-tag skills-tag">Skills</h2>
 					<div class="skills-carousel">
-						<button class="left-arrow arrow">
+						<button class="left-arrow arrow" aria-label="Slider left arrow">
 							<svg width="26" height="45" viewBox="0 0 26 45" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M24.5085 6.44074C25.8565 5.05531 25.8262 2.83944 24.4407 1.49146C23.0553 0.143474 20.8394 0.173829 19.4915 1.55926L24.5085 6.44074ZM4 22.5L1.49146 20.0593C0.169515 21.4179 0.169515 23.5821 1.49146 24.9407L4 22.5ZM19.4915 43.4407C20.8394 44.8262 23.0553 44.8565 24.4407 43.5085C25.8262 42.1606 25.8565 39.9447 24.5085 38.5593L19.4915 43.4407ZM19.4915 1.55926L1.49146 20.0593L6.50854 24.9407L24.5085 6.44074L19.4915 1.55926ZM1.49146 24.9407L19.4915 43.4407L24.5085 38.5593L6.50854 20.0593L1.49146 24.9407Z" fill="#F06449"/>
 							</svg>
@@ -295,7 +304,7 @@
 								<h1>CLI</h1>
 							</div>
 						</div>
-						<button class="right-arrow arrow">
+						<button class="right-arrow arrow"aria-label="Slider right arrow">
 							<svg width="26" height="45" viewBox="0 0 26 45" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M1.49146 38.5593C0.143474 39.9447 0.173829 42.1606 1.55926 43.5085C2.94469 44.8565 5.16056 44.8262 6.50854 43.4407L1.49146 38.5593ZM22 22.5L24.5085 24.9407C25.8305 23.5821 25.8305 21.4179 24.5085 20.0593L22 22.5ZM6.50854 1.55926C5.16056 0.173828 2.94469 0.143475 1.55926 1.49146C0.173829 2.83944 0.143475 5.05531 1.49146 6.44074L6.50854 1.55926ZM6.50854 43.4407L24.5085 24.9407L19.4915 20.0593L1.49146 38.5593L6.50854 43.4407ZM24.5085 20.0593L6.50854 1.55926L1.49146 6.44074L19.4915 24.9407L24.5085 20.0593Z" fill="#F06449"/>
 							</svg>
