Updated projects section

--- a/index.html
+++ b/index.html
@@ -344,6 +344,27 @@
 								</form>
 							</div>
 						</div>
+
+
+
+						<div class="project-card">
+							<img
+								src="resources/web-access-screenshot.png"
+								alt=""
+								class="project-image"
+							/>
+							<div class="card-bottom">
+								<h4>Web Accessibility Chrome Extension</h4>
+								<form
+									class="button-form"
+									action="https://github.com/Qwilliams815/WebAccessibilityChromeExt"
+									method="GET"
+									target="_blank"
+								>
+									<button type="submit" class="card-button">Code</button>
+								</form>
+							</div>
+						</div>
 						<div class="project-card">
 							<img
 								src="resources/score-keeper-screenshot.png"
@@ -370,32 +391,6 @@
 								</form>
 							</div>
 						</div>
-						<div class="project-card">
-							<img
-								src="resources/web-scraper.png"
-								alt=""
-								class="project-image"
-							/>
-							<div class="card-bottom">
-								<h4>CLI Web Browser</h4>
-								<form
-									class="button-form"
-									action="https://github.com/Qwilliams815/text_based_browser"
-									method="GET"
-									target="_blank"
-								>
-									<button type="submit" class="card-button">Code</button>
-								</form>
-								<!-- <form
-									class="button-form"
-									action=""
-									method="GET"
-									target="_blank"
-								>
-									<button type="submit" class="card-button">Demo</button>
-								</form> -->
-							</div>
-						</div>
 						<div class="project-card project-4">
 							<img
 								src="resources/github-pic.png"
@@ -406,7 +401,7 @@
 								<h4>Current WIP, check it out!</h4>
 								<form
 									class="button-form"
-									action="https://github.com/Qwilliams815/React.js-Book-Store"
+									action="https://github.com/Qwilliams815?tab=repositories"
 									method="GET"
 									target="_blank"
 								>
