--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 							aria-label="Mimo course"
 						></a>
 						<a
-							href="https://learning.edx.org/course/course-v1:HarvardX+CS50+X/home"
+							href="https://certificates.cs50.io/e8b98181-c1f8-405a-96f6-9fa6c869e0d9.pdf?size=letter"
 							target="_blank"
 							class="course"
 							id="course5"
